# user_kernel_interface

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README  container_test.c  div64.c  doxygen.conf  jiffies.c  list_test.c  meson.build  readme.md  target.mk  timer.c  timer_test.c  uki_test.c  user_kernel_interface.c
uki/: bitops.h  bug.h  delay.h  div64.h  ffs.h  fls.h  fls64.h  jiffies.h  kernel.h  list.h  log2.h  math64.h  memory.h  poison.h  stdlib.h  time64.h  timer.h  typecheck.h  types.h
